Add RedisNote for

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Learning
+title: 是可可呀~ | BlogSelf
 subtitle: ''
 description: 'You have to put a grape in your mouth to call it sour'
 keywords: ''
