--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -617,7 +617,7 @@ hr_icon:
 
 # the subtitle on homepage (主頁subtitle)
 subtitle:
-  enable: false
+  enable: true
   # Typewriter Effect (打字效果)
   effect: true
   # loop (循環打字)
@@ -652,36 +652,36 @@ aside:
     enable: true
     description:
     button:
-      enable: false
+      enable: true
       icon: fab fa-github
-      text: To GitHub
-      link: https://github.com/1760317896/1760317896.github.io
+      text: To GitHub(网站开源)
+      link: https://github.com/1760317896/YeBlog
   card_announcement:
     enable: true
     content: 一路走，一路学。面朝大海，望眼欲穿。
-  card_recent_post:
-    enable: true
+  card_recent_post:          #最新发布的文章
+    enable: false
     limit: 5 # if set 0 will show all
     sort: date # date or updated
     sort_order: # Don't modify the setting unless you know how it works
-  card_categories:
+  card_categories:           #
     enable: true
     limit: 8 # if set 0 will show all
-    expand: none # none/true/false
+    expand: true # none/true/false
     sort_order: # Don't modify the setting unless you know how it works
-  card_tags:
-    enable: true
+  card_tags:              #标签
+    enable: false
     limit: 40 # if set 0 will show all
     color: false
     sort_order: # Don't modify the setting unless you know how it works
-  card_archives:
+  card_archives:            #归档
     enable: false
     type: monthly # yearly or monthly
     format: MMMM YYYY # eg: YYYY年MM月
     order: -1 # Sort of order. 1, asc for ascending; -1, desc for descending
     limit: 8 # if set 0 will show all
     sort_order: # Don't modify the setting unless you know how it works
-  card_webinfo:
+  card_webinfo:            #网站资讯
     enable: true
     post_count: true
     last_push_date: true
@@ -701,8 +701,8 @@ runtimeshow:
   publish_date: 2021/12/17
 
 # Aside widget - Newest Comments
-newest_comments:
-  enable: false
+newest_comments:    #最新评论
+  enable: true
   sort_order: # Don't modify the setting unless you know how it works
   limit: 6
   storage: 10 # unit: mins, save data to localStorage
@@ -800,7 +800,7 @@ aplayerInject:
 # position 彈窗位置
 # 可選 top-left / top-center / top-right / bottom-left / bottom-center / bottom-right
 snackbar:
-  enable: false
+  enable: true
   position: bottom-left
   bg_light: '#49b1f5' # The background color of Toast Notification in light mode
   bg_dark: '#121212' # The background color of Toast Notification in dark mode
