--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "5.4.0"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "hexo": "^5.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
